2003-08-19  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport.cpp: really merge when --merge=lib and image name are
	  specified.

2003-08-16  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opannotate.cpp: output threshold percent when necessary.

2003-08-16  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: remove ELF-based symbol size code

2003-08-15  William Cohen  <wcohen@redhat.com>

	* doc/opcontrol.1.in:
	* doc/oprofile.1.in:
	* doc/oprofile.xml: Correct path to /root/.oprofile/daemonrc.

2003-08-15  Thomas Spatzier  <TSPAT@de.ibm.com>

	* daemon/opd_cookie.h: fix s390 syscall

2003-08-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp: erase_to_last_of() is not a ltrim()

2003-08-14  Philippe Elie  <phil.el@wanadoo.fr>

	Dave Jones suggested this change.

	* module/x86/op_model_p4.c: remove superflous ';' at end of some macro

2003-08-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.h: remove erase_from_last_of()
	* libutil++/string_manip.cpp: and tidy erase_to_last_of(), rtrim() and
	  ltrim()

2003-08-13  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.h:
	* libpp/profile_container.cpp: remove nil_symbol_index

2003-08-13  John Levon  <levon@movementarian.org>

	* libpp/profile_container.cpp:
	* libpp/profile_container.h: remove "base_vma" parameter
	to add_samples(), we can just re-grab it straight from
	the abfd

2003-08-13  John Levon  <levon@movementarian.org>

	* libpp/profile_container.cpp:
	* libpp/profile_container.h: remove unused "zero samples"
	optimization hint: it's always false

	* pp/opannotate.cpp:
	* pp/opgprof.cpp:
	* pp/opreport.cpp: from above

2003-08-12  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: small trivialities

2003-08-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libregex/stl.pat.in: minor fix/improvments
	* libregex/mangled-name.txt: add tests

2003-08-12  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport.cpp: fix thinko when --merge=lib
